--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Navid Farahzadi <na.farahzadi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack --progress --config webpack.dev.js"
+    "start": "webpack-dev-server --progress --config webpack.dev.js --open"
   },
   "dependencies": {},
   "devDependencies": {
@@ -14,6 +14,8 @@
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.3.3",
     "babel-preset-flow": "^6.23.0",
+    "browser-sync": "^2.18.8",
+    "browser-sync-webpack-plugin": "^1.1.4",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-plugin-import": "^2.2.0",
@@ -24,6 +26,7 @@
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
-    "webpack": "^2.3.3"
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2"
   }
 }
