--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Navid Farahzadi <na.farahzadi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --progress --config webpack.dev.js --open"
+    "start": "webpack-dev-server --progress --config webpack.dev.js"
   },
   "dependencies": {},
   "devDependencies": {
