--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browser-sync-webpack-plugin": "^1.1.4",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
