--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "flow-bin": "^0.44.0",
+    "html-webpack-harddisk-plugin": "^0.1.0",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
+    "pug": "^2.0.0-beta11",
+    "pug-loader": "^2.3.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3",
